this is an exemple of Protobuffers grpc based architechtural style

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>ProtoBuffersTest</artifactId>
+    <artifactId>GrpcService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ProtoBuffersTest</name>
     <description>ProtoBuffersTest</description>
