--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -3,10 +3,10 @@ name: Java CI with Maven
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -29,9 +29,6 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
-
-
 
       - name: Build with Maven
         run: mvn clean install -DskipTests=true
