--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,10 +1,7 @@
-name: Java CI with Maven
+name: CI and Dockerization
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
     branches:
       - master
 
