--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -32,14 +32,14 @@ jobs:
       - name: Build with Maven
         run: mvn clean install package
 
-    # Optionally deploy (e.g., to a server or container registry)
-    # - name: Deploy to production server
-    #   run: ./deploy.sh
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: azizdhoukar  # Use secrets for production
+          password: dckr_pat_f4szj9gJ7kku6kw0Fl3zoReo_QA  # Use secrets for production
 
-    # Optionally, if you want to build a Docker image or use a Spring Boot JAR
-    # - name: Build Docker image
-    #   run: docker build -t my-spring-boot-app .
+      - name: Build Docker image
+        run: docker build -t azizdhoukar/ps5:Order .
 
-    # If you use a Docker image, you can push it to DockerHub or another registry
-    # - name: Push Docker image
-    #   run: docker push my-spring-boot-app
+      - name: Push Docker image to Docker Hub
+        run: docker push azizdhoukar/ps5:Order
