--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8003
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/grpcmsg
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
