--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  build:
+  test_build_dockerize:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -14,6 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
+          POSTGRES_DB: grpcmsg
         ports:
           - 5432:5432
         options: >-
