--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=ProtoBuffersTest
 server.port=8003
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/grpcmsg
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:grpcmsg}
+spring.datasource.username=${POSTGRES_USER:postgres$}
+spring.datasource.password=${POSTGRES_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
