--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ProtoBuffersTest
 server.port=8003
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:grpcmsg}
-spring.datasource.username=${POSTGRES_USER:postgres$}
+spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
