--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -26,6 +26,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Fetch all tags
+        run: git fetch --tags
+
+      - name: Get latest version
+        id: get_version
+        run: |
+          # Get the latest tag (if no tags, default to 0.0.0)
+          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
+          echo "Latest tag: $TAG"
+          
+          # Split the version into parts (major.minor.patch)
+          IFS='.' read -r MAJOR MINOR PATCH <<<"$TAG"
+          
+          # Increment the patch version
+          NEW_PATCH=$((PATCH + 1))
+          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      - name: Tag new version
+        run: |
+          git tag ${{ env.NEW_VERSION }}
+          git push origin ${{ env.NEW_VERSION }}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -45,23 +69,6 @@ jobs:
       - name: Build with Maven
         run: mvn clean install package
 
-      # Get version from a VERSION file or increment based on git
-      - name: Get Version
-        id: version
-        run: |
-          if [ -f VERSION ]; then
-            VERSION=$(cat VERSION)
-            echo "VERSION=$VERSION" >> $GITHUB_ENV
-          else
-            VERSION="1.0.0"
-            echo $VERSION > VERSION
-            echo "VERSION=$VERSION" >> $GITHUB_ENV
-          fi
-          # Append Git short SHA for uniqueness
-          GIT_SHA=$(git rev-parse --short HEAD)
-          NEW_VERSION="$VERSION-$GIT_SHA"
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -73,12 +80,3 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: docker push azizdhoukar/ps5:Order-${{ env.NEW_VERSION }}
-
-      - name: Update VERSION file
-        run: |
-          echo "${{ env.NEW_VERSION }}" > VERSION
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add VERSION
-          git commit -m "Bump version to ${{ env.NEW_VERSION }}"
-          git push
