--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,33 +22,10 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Fetch all tags
-        run: git fetch --tags
-
-      - name: Get latest version
-        id: get_version
-        run: |
-          # Get the latest tag (if no tags, default to 0.0.0)
-          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-          echo "Latest tag: $TAG"
-          
-          # Split the version into parts (major.minor.patch)
-          IFS='.' read -r MAJOR MINOR PATCH <<<"$TAG"
-          
-          # Increment the patch version
-          NEW_PATCH=$((PATCH + 1))
-          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-          
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-
-      - name: Tag new version
-        run: |
-          git tag ${{ env.NEW_VERSION }}
-          git push origin ${{ env.NEW_VERSION }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -76,7 +53,7 @@ jobs:
           password: dckr_pat_f4szj9gJ7kku6kw0Fl3zoReo_QA  # Use secrets for production
 
       - name: Build Docker image
-        run: docker build -t azizdhoukar/ps5:Order-${{ env.NEW_VERSION }} .
+        run: docker build -t azizdhoukar/ps5:Order .
 
       - name: Push Docker image to Docker Hub
-        run: docker push azizdhoukar/ps5:Order-${{ env.NEW_VERSION }}
+        run: docker push azizdhoukar/ps5:Order
