--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,11 @@
             <version>6.0.53</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
