--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ProtoBuffersTest
 server.port=8003
+grpc.server.port= 50050
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:grpcmsg}
 spring.datasource.username=${POSTGRES_USER:root}
