added rest endpoints to list the orders we will still use grpc with event service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8003
 grpc.server.port=${ORDER_GRPC_PORT:50050}
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:grpcmsg}
-spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:password}
+spring.datasource.username=${POSTGRES_USER:root}
+spring.datasource.password=${POSTGRES_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
